[package]
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
documentation = "http://nicholasbishop.github.io/vec2d/doc/vec2d"
description = "Very simple 2D container for storing rectangular data"
license = "Apache-2.0"
name = "vec2d"
readme = "README.md"
repository = "https://github.com/nicholasbishop/vec2d"
version = "0.1.0"
