[package]
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
description = "Very simple 2D container for storing rectangular data"
license = "Apache-2.0"
name = "vec2d"
readme = "README.md"
repository = "https://github.com/nicholasbishop/vec2d"
version = "0.3.0"

[features]
serde_support=["serde"]

[dependencies]
serde={version="^1.0.0", features=["derive"], optional=true}

[dev-dependencies]
serde_json="^1.0.0"
