[badges.maintenance]
status = "deprecated"

[package]
description = "Very simple 2D container for storing rectangular data"
license = "Apache-2.0"
name = "vec2d"
repository = "https://github.com/nicholasbishop/vec2d"
version = "0.4.1"
edition = "2021"

[features]
serde_support = ["serde"]

[dependencies]
serde = { version = "1.0.132", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.73"
